<resources>
    <string name="app_name">jMusic</string>
    <string name="my_music">My Music</string>
    <string name="audio_title">Audio Title</string>
    <string name="_00_00">00:00</string>
    <string name="jMusic">`  jMusic\u0020</string>
    <string name="nikhil_gupta">Nikhil Gupta</string>
    <string name="powered">This is</string>
    <string name="action_share">Share</string>
    <string name="action_settings">Settings</string>
<!--    String formating in xml-->
    <string name="welcome_messages">Hello, %1$s! You have %2$d new messages.</string>
    <string name="app_link">https://github.com/Nikhil-Gupta-ind/jCloud</string>
    <string name="unknown_artist">Unknown Artist</string>
</resources>