<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ImageView
        android:id="@+id/play_all"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:elevation="32dp"
        app:layout_constraintBottom_toBottomOf="@id/dashboard_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dashboard_card"
        app:layout_constraintVertical_bias="0.29000002"
        app:srcCompat="@drawable/play"/>
    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:elevation="33dp"
        app:layout_constraintBottom_toBottomOf="@id/play_all"
        app:layout_constraintEnd_toEndOf="@+id/play_all"
        app:layout_constraintStart_toStartOf="@+id/play_all"
        app:layout_constraintTop_toTopOf="@id/play_all"
        app:srcCompat="@drawable/dashboard_play__24" />

    <androidx.cardview.widget.CardView
        android:id="@+id/dashboard_card"
        android:layout_width="0dp"
        android:layout_height="300dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_gradient"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="25dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/great_vibes"
                android:text="@string/powered"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="@+id/audio_title"
                app:layout_constraintTop_toTopOf="@+id/audio_title" />

            <TextView
                android:id="@+id/audio_title"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/condiment"
                android:text="@string/jMusic"
                android:textColor="@color/white"
                android:textSize="80sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end
"
                android:fontFamily="@font/condiment"
                android:text="@string/nikhil_gupta"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/audio_title"
                app:layout_constraintEnd_toEndOf="@+id/audio_title" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dashboard_card">

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="60dp"
            android:background="@drawable/list_bg">

        </ListView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/list_bg"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:srcCompat="@drawable/list_bg" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:paddingLeft="15dp"
                    android:text="My Music"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />



</androidx.constraintlayout.widget.ConstraintLayout>