<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.03" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/rectangle" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        app:cardElevation="4dp"
        app:cardCornerRadius="30dp"
        android:layout_marginBottom="-30dp"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/constraint2">

            <ImageView
                android:id="@+id/iVAlbumArt"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="40dp"
                app:layout_constraintBottom_toTopOf="@+id/textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.521"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/demo_album2" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Powered by"
                android:textColor="@color/blue"
                android:textStyle="italic"
                app:layout_constraintBottom_toTopOf="@+id/textView"
                app:layout_constraintStart_toStartOf="@+id/textView" />
            <TextView
                android:id="@+id/textView"
                android:layout_width="140dp"
                android:layout_height="75dp"
                android:fontFamily="@font/condiment"
                android:includeFontPadding="true"
                android:text="@string/jMusic"
                android:textColor="@color/blue"
                android:textSize="48dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <FrameLayout
                android:id="@+id/linearLayout2"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="40dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/audio_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/audio_title"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:ellipsize="marquee"
                        android:fadingEdge="horizontal"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:scrollHorizontally="true"
                        android:singleLine="true"
                        android:paddingEnd="35dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/unknown_artist"
                        android:textSize="16sp"
                        android:ellipsize="marquee"
                        android:fadingEdge="horizontal"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:scrollHorizontally="true"
                        android:singleLine="true"
                        android:paddingEnd="35dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/audio_title" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/black_symbolheart" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </FrameLayout>

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="0dp"
                android:layout_height="21dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="30dp"
                android:progressTint="@color/blue"
                android:soundEffectsEnabled="true"
                android:thumbTint="@color/blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

            <TextView
                android:id="@+id/currentT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="00:00"
                app:layout_constraintStart_toStartOf="@+id/seekBar"
                app:layout_constraintTop_toBottomOf="@+id/seekBar" />

            <TextView
                android:id="@+id/maxT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="03:10"
                app:layout_constraintEnd_toEndOf="@+id/seekBar"
                app:layout_constraintTop_toBottomOf="@+id/seekBar" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout"
                android:layout_width="200dp"
                android:layout_height="112dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/seekBar">

                <ImageView
                    android:id="@+id/previous"
                    android:onClick="setPrevious"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/previous" />

                <ImageView
                    android:id="@+id/play"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_baseline_play_arrow_24" />

                <ImageView
                    android:id="@+id/next"
                    android:onClick="setNext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/next" />

                <ImageView
                    android:id="@+id/repeat"
                    android:onClick="setRepeat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:srcCompat="@drawable/repeat" />
            </androidx.constraintlayout.widget.ConstraintLayout>

<!--            <TextView-->
<!--                android:id="@+id/textView6"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="From"-->
<!--                android:textColor="#65B4D7"-->
<!--                android:textSize="12sp"-->
<!--                android:textStyle="italic"-->
<!--                app:layout_constraintBottom_toTopOf="@+id/textView4"-->
<!--                tools:layout_editor_absoluteX="140dp" />-->

<!--            <TextView-->
<!--                android:id="@+id/textView4"-->
<!--                android:layout_width="131dp"-->
<!--                android:layout_height="35dp"-->
<!--                android:layout_marginBottom="40dp"-->
<!--                android:fontFamily="cursive"-->
<!--                android:includeFontPadding="true"-->
<!--                android:text="@string/nikhil_gupta"-->
<!--                android:textColor="#01A2EB"-->
<!--                android:textSize="24sp"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent" />-->

            <TextView
                android:id="@+id/copyright"
                android:layout_width="194dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:lineSpacingExtra="6dp"
                android:text="Nikhil Gupta ©2021-22"
                android:textAlignment="center"
                android:textColor="#A1A1A1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>